Fix more layout issues

--- a/style/less/kent/future/structure.less
+++ b/style/less/kent/future/structure.less
@@ -10,75 +10,78 @@
     .container();
     padding-top: 0;
 
-	#page-header #headerwrap {
-	    height: 60px;
-	    .row();
+	#page-header {
+		padding: 5px 0;
 
-	    .brand {
-	        color: @kent-corp-primary;
-	        font-size: 34px;
-	        margin-top: 7px;
-	    }
+		#headerwrap {
+		    height: 50px;
+		    .row();
 
-	    .usermenu {
-	        position: relative;
-	        height: 100%;
+		    .brand {
+		        color: @kent-corp-primary;
+		        font-size: 34px;
+		        margin-top: 2px;
+		    }
 
-	        .login {
-	            display: block;
-	            margin-top: 20px;
-	        }
+		    .usermenu {
+		        position: relative;
+		        height: 100%;
 
-	        .moodle-actionmenu {
-	            .menubar {
-	                margin: 0;
+		        .login {
+		            display: block;
+		            margin-top: 15px;
+		        }
 
-	                & > li {
-	                    width: 100%;
+		        .moodle-actionmenu {
+		            .menubar {
+		                margin: 0;
 
-	                    & > a {
-	                        padding: 0;
-	                    }
-	                }
-	            }
+		                & > li {
+		                    width: 100%;
 
-	            .toggle-display {
-	                height: auto;
+		                    & > a {
+		                        padding: 0;
+		                    }
+		                }
+		            }
 
-	                .userbutton {
-	                    display: block;
-	                    height: auto;
+		            .toggle-display {
+		                height: auto;
 
-	                    .usertext {
-	                        color: @kent-corp-primary;
-	                        font-size: 21px;
-	                        line-height: 25px;
-	                        padding-top: 21px;
-	                    }
+		                .userbutton {
+		                    display: block;
+		                    height: auto;
 
-	                    .avatars {
-	                        vertical-align: top;
-	                        padding-top: 5px;
-	                        margin-right: 0;
-	                        height: auto;
-	                        width: auto;
-	                    }
-	                }
+		                    .usertext {
+		                        color: @kent-corp-primary;
+		                        font-size: 21px;
+		                        line-height: 25px;
+		                        padding-top: 15px;
+		                    }
 
-	                .caret {
-	                    display: none;
-	                }
-	            }
+		                    .avatars {
+		                        vertical-align: top;
+		                        margin-right: 0;
+		                        height: auto;
+		                        width: auto;
+		                    }
+		                }
 
-	            &.show {
-	                height: 100%;
+		                .caret {
+		                    display: none;
+		                }
+		            }
 
-	                .menu {
-	                    border-radius: @border-radius-generic;
-	                }
-	            }
-	        }
-	    }
+		            &.show {
+		                height: 100%;
+
+		                .menu {
+		                    border-radius: @border-radius-generic;
+		                }
+		            }
+		        }
+		    }
+		}
 	}
 
 	.navbar .breadcrumb {
